Fix content card alignment

--- a/style.css
+++ b/style.css
@@ -157,39 +157,35 @@ button {
 }
 
 #dashboard-heading {
-    font-size: 30px;
+    font-size: 24px;
     justify-self: self-start;
 }
 
 #main-container {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    padding: 25px;
+    gap: 25px;
+    align-self: self-start;
+    padding: 0 25px;
 }
 
 #projects-container {
     grid-column: 1;
     display: grid;
     grid-template-rows: 1fr 8fr;
+    align-self: self-start;
+    height: 100%;
 }
 
 #main-column-2 {
     grid-column: 2;
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-}
-
-#announcements-container {
-    grid-column: 2;
-}
-
-#trending-container {
-    grid-column: 2;
+    grid-template-rows: 1fr 3.5fr 1fr 3.5fr;
 }
 
 .project-card {
     background-color: white;
-    height: 200px;
+    height: 100%;
     border-radius: 8px;
 }
 
@@ -201,7 +197,7 @@ button {
     grid-row: 2;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 10px;
+    gap: 25px;
 }
 
 #sidebar li {
@@ -212,6 +208,11 @@ button {
     margin-bottom: 50px;
 }
 
+.content-container {
+    background-color: white;
+    height: 100%;
+    border-radius: 8px;
+}
 
 
 
